[package]
name = "opcuad"
version = "0.1.0"
authors = ["Gabriel Malkas <gabriel.malkas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opcua-client = "0.8.0"
opcua-console-logging = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
